--- a/config.json
+++ b/config.json
@@ -1,22 +1,1 @@
-{
-    "hosts-path": "/etc/hosts",
-    "projects": [
-        {
-            "id": 0,
-            "project-name": "Local Hoster",
-            "project-path": "/Users/montgomeryb/Projects/LocalHoster",
-            "server-name": "local.hoster.com"
-        },
-        {
-            "id": 1,
-            "project-name": "Project 2",
-            "project-path": "/Users/montgomeryb/Projects/",
-            "server-name": "local.project2.com"
-        }
-    ],
-    "projects-path": [
-        "/Users/montgomeryb/Projects/",
-        "/Users/montgomeryb/Projects/Github"
-    ],
-    "vhost-path": "/etc/apache/extra/httpd-vhosts.conf"
-}
+{"hosts-path":"\/etc\/hosts","projects":{"0":{"id":0,"project-name":"Local Hoster","project-path":"\/Users\/montgomeryb\/Projects\/LocalHoster","server-name":"local.hoster.com"},"3":{"project-name":"try this","server-name":"local.trythis.com","project-path":"\/Users\/montgomeryb\/Projects\/","id":3}},"projects-path":["\/Users\/montgomeryb\/Projects\/","\/Users\/montgomeryb\/Projects\/Github"],"vhost-path":"\/etc\/apache\/extra\/httpd-vhosts.conf"}
