--- a/app/Storage/settings.json
+++ b/app/Storage/settings.json
@@ -1,1 +1,8 @@
-{}
+{
+	"hosts-path":"/etc/hosts",
+	"projects-path": [
+	  "/Users/montgomeryb/Projects/",
+	  "/Users/montgomeryb/Projects/Github"
+	],
+	"vhost-path": "/etc/apache/extra/httpd-vhosts.conf"
+}
