add file exists/writable check for hosts and vhosts

--- a/app/Storage/settings.json
+++ b/app/Storage/settings.json
@@ -5,5 +5,5 @@
 	  "/Users/montgomeryb/Projects/",
 	  "/Users/montgomeryb/Projects/Github"
 	],
-	"vhost-path": "/etc/apache/extra/httpd-vhosts.conf"
+	"vhosts-path": "/etc/apache2/extra/httpd-vhosts.conf"
 }]
