add file exists/writable check for hosts and vhosts

--- a/app/Storage/settings.json
+++ b/app/Storage/settings.json
@@ -1,9 +1,1 @@
-[{
-  "id":0,
-	"hosts-path":"/etc/hosts",
-	"projects-path": [
-	  "/Users/montgomeryb/Projects/",
-	  "/Users/montgomeryb/Projects/Github"
-	],
-	"vhosts-path": "/etc/apache2/extra/httpd-vhosts.conf"
-}]
+[{"hosts-path":"\/etc\/hosts","vhosts-path":"\/etc\/apache2\/extra\/httpd-vhosts.conf","projects-path":["\/Projects","\/Projects\/Github"],"id":0}]
